Fix Github Pages Favicon
Signed-off-by: Drumil Patel <drumilpatel720@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weastel Corporation</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="images/logo-color.png" type="image/x-icon">
 </head>
 <body>
     <img src="images/logo-color.png" id="logo" />
