--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" href="images/logo-color.png" type="image/x-icon">
 </head>
 <body>
-    <img src="images/logo-color.png" id="logo" />
+    <img src="images/logo-color.png" class="logo-image" id="logo" />
 </body>
 </html>
